fix player size on tablet view

--- a/front/sass/header.sass
+++ b/front/sass/header.sass
@@ -42,7 +42,7 @@
 @media screen and (max-width: 1280px) and (max-height: 1706px) and (orientation: portrait)
   .land
     &__header
-      height: 110px
+      height: 125px
     &__buttons
       padding-block: 10px
       font-size: 26px
